--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Obter código"
-      - run: echo "Executar o Docker Build
+      - run: echo "Executar o Docker Build"
       - run: echo "Enviar a imagem Docker para o Docker Hub"
   CD:
     runs-on: ubuntu-latest
