--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,25 +8,45 @@ jobs:
   CI:
     runs-on: ubuntu-latest
     steps:
+
       - name: Obtendo o Codigo
         uses: actions/checkout@v4.2.2
+
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
+
       - name: Construcao e Envio da Imagem Docker
         uses: docker/build-push-action@v6
         with:
           context: ./src
           push: true
           file: ./src/Dockerfile
-          tags: danieldevpy/fake-shop-desafio:v2
+          tags: |
+            danieldevpy/fake-shop-desafio:v${{ github.run_number }}
+            danieldevpy/fake-shop-desafio
+
   CD:
     needs: [CI]
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Obter Código"
-      - run: echo "Condigurar o kubeconfig"
-      - run: echo "Executar o apply"
-    
+
+      - name: Obtendo o Codigo
+        uses: actions/checkout@v4.2.2
+
+      - name: Setando Cube Config
+        uses: azure/k8s-set-context@v4
+        with:
+           method: kubeconfig
+           kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
+
+      - name: apply k8s
+        uses: Azure/k8s-deploy@v5
+        with:
+          manifests: |
+              k8s/deployment.yaml
+          images: |
+            tags: danieldevpy/fake-shop-desafio:v${{ github.run_number }}
+
